Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42831

QML/JS Console cannot access symbols from plugins

    XMLWordPrintable

Details

    • cfdcc65cc54fc973a147044fc592779e87a669c4 (qtdeclarative)

    Description

      This is a follow-up for QTBUG-37119, which has been closed.
      Unfortunately, this is still not working when accessing symbols from imported plugins. I can display the values of JavaScript objects in the QML/JS Console, but not values from plugins.

      Reproduction:

      Build the qmlextensionplugins example provided with the Qt sources. Set a breakpoint in plugins.qml at the line "minutes: time.minute". Start the debugger. When it hits the breakpoint, type in the QML/JS Console "hours" which displays the current hour (the value of the QML property), but if you type "time.hour" (the property of the imported plugin), you get "undefined", however, this should return the same value as "hours".

      With the same example from the Qt 4 source tree (examples/declarative/cppextensions/plugins), I can access properties from plugins, e.g. I can type "time.hour" in the QML/JS Console to get the value of the hour property in the TimeModel.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            ufleisch Urs Fleisch
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes